--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Proxima';
+    src: url("../fonts/FontsFree-Net-Proxima-Nova-Bold.otf") format("opentype");
+}
+
+body { font-family: 'Proxima'; }
+
 .alert p { display: inline !important; }
 img { max-width: 100%; height: auto; } 
 @media (min-width: 1440px) {
@@ -12,17 +19,13 @@ a:hover { text-decoration: none; }
 .text-green { color: #00ff17; }
 .text-orange { color: #ff9900; }
 .text-red { color: #ff0000; }
+.bg-black { background-color: #000; }
 
-/* Recensies */
-.recensies-overview { margin-bottom: 50px; }
-.single-recensie {	background: #f7f7f7; border: 1px solid #eee; padding: 10px; margin-bottom: 15px; line-height: 28px; }
-.single-recensie .rating-xs { font-size: 1.5em; }
-.customer-reviews { text-align: center; padding-top: 10px; position: relative; }
-.customer-reviews span.title { display: block; background: #d8d8d8; padding: 15px; color: #717171; text-align: left; font-size: 16px; padding: 15px 25px; }
-.customer-reviews span#rating { display: inline-block; width: 70px; height: 70px; line-height: 70px; border-radius: 100%; background: #f3a12b; color: #a26307; box-shadow: 2px 1px 0px 0px #bf7811; position: absolute; right: -10px; top: 0; font-size: 24px; font-weight: 500; }
-.customer-reviews .rating-xs { background: #f7f7f7; padding: 15px; border-left: 2px solid #d8d8d8; border-right: 2px solid #d8d8d8; }
-.customer-reviews a.btn { display: block; border-radius: 0; border: none; background: #006935; color: rgba(255,255,255, 0.8); text-shadow: none; padding: 15px; border-bottom: 3px solid #004020; font-size: 16px; text-align: center; transition: 0.3s ease; }
-.customer-reviews a.btn:hover { background: #004020; }
+.btn.btn-primary { background-color: rgb(255, 126, 0); border-color: rgb(255, 126, 0); color: #fff; }
+.btn.btn-primary:hover, .btn.btn-primary:focus, .btn.btn-primary:active { background-color: rgb(255, 126, 0); border-color: rgb(255, 126, 0); color: #000; }
+
 
 form { margin: 0; }
 .table td, .table th { vertical-align: middle; border: 0; padding: .30rem 1rem; }
+
+.navbar-brand svg { width: 180px; height: 24px; }
