--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ a:hover { text-decoration: none; }
 
 #cke_18 { display: none; }
 
-.text-green { color: #00ff17; }
+.text-green { color: #28a745; }
 .text-orange { color: #ff9900; }
 .text-red { color: #ff0000; }
 .bg-black { background-color: #000; }
