--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,12 @@ form { margin: 0; }
 .table td, .table th { vertical-align: middle; border: 0; padding: .30rem 1rem; }
 .table td .btn { padding: .1rem .4rem; }
 .navbar-brand svg { width: 180px; height: 24px; }
+
+
+.navbar { padding: 0 30px; }
+.dropdown { position: absolute; list-style: none; background-color: #000; display: none; z-index: 9999; }
+.nav-item:hover .dropdown { display: block; }
+.nav-item .dropdown .nav-item .nav-link { padding: 13px; }
+
+.nav-item .nav-link { padding: 1rem; }
+.nav-item:hover { box-shadow: inset 0 -5px 0 rgb(255, 126, 0); }
